# ESP32-P4-Adcance-brookesia_phone

./: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.defaults
components/apps/: apps.h
components/apps/bme680_sensor/: Bme680Sensor.cpp  Bme680Sensor.hpp  bme680_driver.c  bme680_driver.h
components/apps/bme680_sensor/assets/: img_app_bme680.c
components/apps/camera/: Camera.cpp  app_pedestrian_detect.cpp
components/apps/camera/ui/screens/: ui_ScreenCameraShot.c
components/apps/setting/: Setting.cpp
components/apps/setting/ui/: ui.c  ui.h
components/apps/setting/ui/screens/: ui_ScreenSettingAbout.c  ui_ScreenSettingBLE.c  ui_ScreenSettingLight.c  ui_ScreenSettingVolume.c  ui_ScreenSettingWiFi.c
components/apps/video_player/: VideoPlayer.cpp
components/bsp_extra/: CMakeLists.txt  idf_component.yml
components/espressif__esp32_p4_function_ev_board/: CMakeLists.txt  bsp_stc8h1kxx.h  esp32_p4_function_ev_board.c  my_codec.c
components/espressif__esp32_p4_function_ev_board/elecrow_ui/: elecrow_ui.c
components/espressif__esp32_p4_function_ev_board/elecrow_ui/images/: icon_click_clicked.c  icon_click_default.c  icon_home_clicked.c  icon_home_default.c  icon_return_clicked.c  icon_return_default.c  loading_bar_0.c  loading_bar_100.c  starting_up_logo.c
components/espressif__esp32_p4_function_ev_board/elecrow_ui/include/: elecrow_ui.h
components/espressif__esp32_p4_function_ev_board/include/bsp/: display.h  esp32_p4_function_ev_board.h
main/: idf_component.yml  main.cpp
